[workspace]
members = [
    ".",
    "fist-core",
    "fist-macros",
    "fist-cli",
]

[package]
name = "my-fist-app"
version = "0.1.0"
edition = "2021"

[dependencies]
fist-core = { path = "./fist-core" }
fist-macros = { path = "./fist-macros" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15"
mimalloc = "0.1"
